--- a/public/assets/css/content.css
+++ b/public/assets/css/content.css
@@ -25,7 +25,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid #eaeaea;
     border-bottom: none;
     padding: 12px 12px;
 }
@@ -41,7 +41,7 @@ a.list-item:hover {
 }
 .list > .list-item:last-child {
     border-radius: 0 0 0.25rem 0.25rem;
-    border-bottom: 1px solid rgba(0,0,0,.125);
+    border-bottom: 1px solid #eaeaea;
 }
 .list-item-sub {
     color: #93989f;
@@ -51,6 +51,26 @@ a.list-item:hover {
 .list-item-sub > .icon {
     font-size: 14px;
     vertical-align: sub;
+}
+
+.page-name {
+    color: #c6c8ca;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    margin-top: 22px;
+}
+.page-name-editable {
+    margin-top: 22px;
+    margin-bottom: 8px;
+    text-transform: capitalize;
+}
+
+.mini-title {
+    font-size: 13px;
+    text-transform: uppercase;
+    color: #c6c8ca;
+    font-weight: 500;
+    margin-bottom: 16px;
 }
 
 /* Title 24px */
