--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,14 +1,14 @@
 .header-main {
     display: flex;
     justify-content: space-between;
-    height: 40px;
+    height: 32px;
     align-items: center;
     margin-top: 16px;
 }
 .header-logo {
     font-weight: bold;
     font-size: 24px;
-    color: #6521ff;
+    color: #f20000;
     display: flex;
     align-items: center;
 }
@@ -23,4 +23,5 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
+    text-transform: uppercase;
 }
